# keras-prophet

./: .gitignore  .travis.yml  Makefile  README.md  Untitled.ipynb  Untitled1.ipynb  keras-prophet-Copy1.ipynb  keras-prophet-prophet-take2.ipynb  keras-prophet.ipynb  pyproject.toml  ryan_adams.py  scripyt.py  simulated-data.ipynb  stl.py  tox.ini
.github/workflows/: python-app.yml
case-studies/: avacados.ipynb  electricity.ipynb  simulated-data.ipynb
case-studies/.ipynb_checkpoints/: avacados-checkpoint.ipynb
notebooks/examples/: avacados.ipynb  birthdays-ryan-adams.ipynb  electricity.ipynb  simulated-data.ipynb  store-sales-forecasting-vanilla.ipynb
ryan_adams/: __init__.py  layers.py  plotting.py  ryan_adams.py
tests/: test_layers.py  test_plotting.py  test_ryan_adams.py
