[tool.poetry]
name = "ryan-adams"
version = "0.0.0"
description = "Like Facebook's Prophet, but with more flexibility"
authors = ["Dante Gates"]
packages = [
    { include = "ryan_adams" },
]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "3.5.1"
numpy = "1.22.3"
pandas = "1.4.1"
tensorflow = "2.7.0"
tensorflow-probability = "0.14.1"

[tool.poetry.dev-dependencies]
pytest = "6.2.5"
pylint = "2.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
